<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".Register">-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    style="@style/loginParent"
    tools:context=".Login">
    <ScrollView
        style="@style/parent">

        <RelativeLayout
            style="@style/parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:weightSum="12">

                <LinearLayout
                    style="@style/parent"
                    android:background="@drawable/login_shape_bk"
                    android:orientation="vertical"
                    android:layout_weight="3">

                    <ImageView
                        style="@style/parent"
                        android:background="@drawable/ic_login_bk"
                        android:contentDescription="login background" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp">


                <TextView
                    style="@style/headerText"
                    android:layout_gravity="center"
                    android:text="Card Exchange"
                    android:layout_marginTop="40dp"/>
<!--                <include-->
<!--                    layout="@layout/layout_register"/>-->
                <androidx.cardview.widget.CardView
                    style="@style/loginCard"
                    app:cardCornerRadius="@dimen/loginCardRadius"
                    android:elevation="5dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:layout_marginBottom="@dimen/loginViewsMargin"
                    android:background="@color/whiteCardColor">

                    <LinearLayout
                        style="@style/linearParent"
                        android:layout_gravity="center"
                        android:padding="@dimen/loginViewsMargin">

                        <TextView
                            style="@style/headerTextPrimary"
                            android:text="@string/register"
                            android:layout_marginTop="@dimen/loginViewsMargin"/>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent"
                            android:layout_marginTop="@dimen/signup_text_margin_top">

                            <EditText
                                android:id="@+id/regName"
                                style="@style/modifiedEditText"
                                android:hint="Name"
                                android:inputType="text"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent"
                            android:layout_marginTop="@dimen/signup_text_margin_top">

                            <EditText
                                android:id="@+id/regMobile"
                                style="@style/modifiedEditText"
                                android:hint="Mobile Number"
                                android:inputType="text"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent"
                            android:layout_marginTop="@dimen/signup_text_margin_top">

                            <EditText
                                android:id="@+id/regEmail"
                                style="@style/modifiedEditText"
                                android:hint="@string/login_email_hint"
                                android:inputType="textEmailAddress"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent"
                            android:layout_marginTop="@dimen/signup_text_margin_top">

                            <EditText
                                android:id="@+id/regPassword"
                                style="@style/modifiedEditText"
                                android:hint="@string/login_password_hint"
                                android:inputType="textPassword"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/registerButton"
                            style="@style/loginButton"
                            android:layout_gravity="center"
                            android:backgroundTint="#00A4FE"
                            android:text="Register" />

                        <TextView
                            android:id="@+id/signIn"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:linksClickable="true"
                            android:text="@string/signup_login_hint"
                            android:textAlignment="center"
                            android:textColor="@color/primaryTextColor"
                            android:textStyle="bold" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <!--            <ImageView-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_alignParentLeft="true"-->
            <!--                android:layout_alignParentTop="true"-->
            <!--                android:layout_marginTop="30dp"-->
            <!--                android:layout_marginLeft="10dp"-->
            <!--                android:src="@android:drawable/ic_menu_close_clear_cancel" />-->
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
<!--    -->
<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
