<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".Login">-->
<!--    -->

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    style="@style/loginParent"
    tools:context=".Login"
    >
    <ScrollView
        style="@style/parent">

        <RelativeLayout
            style="@style/parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:weightSum="12">

                <LinearLayout
                    style="@style/parent"
                    android:background="@drawable/login_shape_bk"
                    android:orientation="vertical"
                    android:layout_weight="3">

                    <ImageView
                        style="@style/parent"
                        android:background="@drawable/ic_login_bk"
                        android:contentDescription="login background" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                >


                <TextView
                    style="@style/headerText"
                    
                    android:layout_gravity="center"
                    android:text="Card Exchange"
                    android:layout_marginTop="40dp"/>
                <androidx.cardview.widget.CardView
                    style="@style/loginCard"
                    app:cardCornerRadius="@dimen/loginCardRadius"
                    android:elevation="5dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:layout_marginBottom="@dimen/loginViewsMargin"
                    android:background="@color/whiteCardColor">



                    <LinearLayout
                        style="@style/linearParent"
                        android:layout_gravity="center"
                        android:padding="@dimen/loginViewsMargin">

                        <TextView
                            style="@style/headerTextPrimary"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:text="Login" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputEmail"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">
                            <EditText
                                android:id="@+id/loginEmail"
                                style="@style/modifiedEditText"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:hint="@string/login_email_hint"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputPassword"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">
                            <EditText
                                android:id="@+id/loginPassword"
                                style="@style/modifiedEditText"
                                android:hint="@string/login_password_hint"
                                android:maxLines="1"
                                android:inputType="textPassword"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            style="@style/viewParent"

                            android:text="Forgot Password?"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="@dimen/newsMoreTextSize"
                            android:layout_gravity="end"
                            android:onClick="viewForgotPassword"
                            android:layout_marginTop="10dp"/>

                        <Button
                            android:id="@+id/loginButton"
                            style="@style/loginButton"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:backgroundTint="#00A4FE"
                            android:text="Login"

                            />

                        <TextView
                            android:id="@+id/signUp"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:onClick="viewRegisterClicked"
                            android:text="@string/login_signup_hint"
                            android:textAlignment="center"
                            android:textColor="@color/primaryTextColor"
                            android:textStyle="bold" />


                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
<!--            <ImageView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_alignParentLeft="true"-->
<!--                android:layout_alignParentTop="true"-->
<!--                android:layout_marginTop="30dp"-->
<!--                android:layout_marginLeft="10dp"-->
<!--                android:src="@android:drawable/ic_menu_close_clear_cancel" />-->
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>